--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -4,7 +4,7 @@
 
 {% block stylesheets %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 <link rel="stylesheet" type="text/css" href="{{ asset('styles/styles.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ asset('styles/home.css') }}">
 {% endblock %}
@@ -236,6 +236,15 @@
           </div>
         </div>
       </div>
+        <!-- Lorem: -->
+        <div>
+        <br><br><br>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consectetur velit a luctus luctus. Nullam in ipsum in nunc efficitur euismod et quis purus. Vestibulum quis dolor eget ante euismod egestas. Vivamus dictum, lectus sit amet semper efficitur, dolor felis pellentesque nisl, id blandit elit ante ut nisl. Maecenas consequat, tortor a dictum hendrerit, magna dui placerat mauris, at pretium leo nisi blandit nulla. Nulla hendrerit porta ipsum in fermentum. Quisque eu elit sit amet magna laoreet consectetur sit amet a dolor. Aliquam commodo viverra bibendum. In vitae sem est.
+        Nunc dignissim elit arcu, nec congue libero volutpat id. Curabitur condimentum feugiat elit eu gravida. Nullam leo libero, vestibulum a scelerisque et, dapibus quis est. Sed nec lacus lacinia, hendrerit lacus a, tristique est. Cras at dui efficitur, dignissim sapien at, consequat sapien. Duis ut sagittis ligula, eu auctor libero. Donec maximus ipsum ut leo mollis commodo. Vivamus ornare, risus ut laoreet faucibus, velit libero pellentesque mi, non vestibulum justo lacus sit amet urna. Morbi sagittis faucibus nisi, ac aliquet nisl facilisis at. Suspendisse vel pellentesque purus. Fusce commodo non nibh et dictum. Ut pellentesque facilisis sollicitudin.
+        Phasellus sit amet sapien risus. Maecenas ac pellentesque nibh. Nulla rutrum feugiat mi. Quisque vestibulum sapien non diam pulvinar pharetra. Sed accumsan vulputate lectus eu tristique. Phasellus eget facilisis diam, sit amet consectetur turpis. Nullam id ultricies augue, sed pretium metus. Suspendisse potenti.
+        Morbi eget blandit velit. Aenean in enim sapien. Nulla facilisi. Ut risus mi, dictum a velit non, dapibus malesuada erat. Cras porta nulla ante, id vulputate odio iaculis a. Sed ac facilisis dui. Nunc tincidunt est et massa auctor, sit amet ultricies nisl convallis. Maecenas venenatis volutpat purus, in dapibus turpis dapibus quis. Pellentesque quis orci pulvinar, consectetur arcu in, feugiat dui. Nulla lobortis vulputate convallis. Nunc nec eleifend libero. Cras scelerisque eros metus, a tristique nibh convallis ac. Ut quis tempor est, nec sodales velit. Duis eleifend et metus eget varius. 
+        <br><br><br>
+        </div>
       <!-- Separación -->
       <svg
         xmlns="http://www.w3.org/2000/svg"
