--- a/templates/serie/views/showAllSeriesGenero.html.twig
+++ b/templates/serie/views/showAllSeriesGenero.html.twig
@@ -160,7 +160,7 @@
           </linearGradient>
         </defs>
       </svg>
-      <h1 class="titulo-pagina">Show All Series {{ genero }}</h1>
+      <h1 class="titulo-pagina">Show All Series de {{ genero }}</h1>
       <!-- TODO: DIV RESPONSIVE PARA CARDS -->
       <div class="container text-center card-container">
         <div class="row">
