Uso de "path" en twigs: - path a otras páginas - path a página de serie usando id de serie

--- a/templates/serie/views/showAllSeries.html.twig
+++ b/templates/serie/views/showAllSeries.html.twig
@@ -160,7 +160,7 @@
           </linearGradient>
         </defs>
       </svg>
-      <h1 class="titulo-pagina">Show All Series</h1>
+      <h1 class="titulo-pagina">Show All Series:</h1>
       <!-- TODO: DIV RESPONSIVE PARA CARDS -->
       <div class="container text-center card-container">
         <div class="row">
