--- a/templates/serie/views/showSerie.html.twig
+++ b/templates/serie/views/showSerie.html.twig
@@ -161,7 +161,7 @@
           </linearGradient>
         </defs>
       </svg>
-      <h1 class="titulo-pagina">Show Serie</h1>
+      <h1 class="titulo-pagina">Show Serie: {{ nombre_serie }}</h1>
       <!-- TODO: DIV RESPONSIVE PARA CARDS -->
       <div class="container text-center card-container">
         <div class="row">
