--- a/templates/serie/views/showAllSeriesGenero.html.twig
+++ b/templates/serie/views/showAllSeriesGenero.html.twig
@@ -103,21 +103,21 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link activo" aria-current="page" href="">Inicio</a>
+              <a class="nav-link" href="{{ path('home') }}">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/perfil.html">Perfil</a>
+              <a class="nav-link" href="">Perfil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/seguimiento.html"
+              <a class="nav-link" href=""
                 >Lista de Seguimiento</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/destacados.html">Destacados</a>
+              <a class="nav-link" href="">Destacados</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/buscar.html">Buscar</a>
+              <a class="nav-link" href="">Buscar</a>
             </li>
           </ul>
         </div>
@@ -160,7 +160,7 @@
           </linearGradient>
         </defs>
       </svg>
-      <h1 class="titulo-pagina">Show All Series de {{ genero }}</h1>
+      <h1 class="titulo-pagina">Show All Series Genero: {{ genero }}</h1>
       <!-- TODO: DIV RESPONSIVE PARA CARDS -->
       <div class="container text-center card-container">
         <div class="row">
@@ -170,7 +170,7 @@
           <div class="col col-sm-12 col-md-4 col-lg-3">
             <!-- CARD -->
             <div class="card" style="width: 14rem; height: 24.6rem">
-                <a href="">
+                <a href="{{ path('mostrar_serie', {'id': serie.id}) }}">
                 <!-- TODO: enlace a la serie -->
                 <img
                     src="{{ asset(serie.posterSrc) }}"
