--- a/templates/serie/views/showAllSeriesGenero.html.twig
+++ b/templates/serie/views/showAllSeriesGenero.html.twig
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg d-flex">
       <div class="container-fluid">
         <!-- ICONO: -->
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{{ path('home') }}">
           <svg
             height="50px"
             width="50px"
