Buscar Serie por Plataforma: - Fixed método buscar serie por plataforma - Fixed Rutas (/ruta/valor=valor) - Fixed twigs

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -170,7 +170,7 @@
           <div class="col col-sm-12 col-md-4 col-lg-3">
             <!-- CARD -->
             <div class="card" style="width: 14rem; height: 24.6rem">
-                <a href="{{ path('mostrar_serie', {'id': serie.id}) }}">
+                <a href="{{ path('mostrar_serie_id', {'id': serie.id}) }}">
                 <!-- TODO: enlace a la serie -->
                 <img
                     src="{{ asset(serie.posterSrc) }}"
