--- a/templates/serie/views/showAllSeriesPlataforma.html.twig
+++ b/templates/serie/views/showAllSeriesPlataforma.html.twig
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="{{ asset('styles/home.css') }}">
 {% endblock %}
 
-{% block title %}Todas las Series de {{ genero }}{% endblock %}
+{% block title %}Series de {{ plataforma }}{% endblock %}
 
 {% block body %}
     <!-- NAVBAR: -->
@@ -170,7 +170,7 @@
           <div class="col col-sm-12 col-md-4 col-lg-3">
             <!-- CARD -->
             <div class="card" style="width: 14rem; height: 24.6rem">
-                <a href="{{ path('mostrar_serie', {'id': serie.id}) }}">
+                <a href="{{ path('mostrar_serie_id', {'id': serie.id}) }}">
                 <!-- TODO: enlace a la serie -->
                 <img
                     src="{{ asset(serie.posterSrc) }}"
