--- a/templates/serie/views/showSerie.html.twig
+++ b/templates/serie/views/showSerie.html.twig
@@ -168,7 +168,7 @@
           <div class="col col-sm-12 col-md-4 col-lg-3">
             <!-- CARD -->
             <div class="card" style="width: 14rem; height: 24.6rem">
-                <a href="{{ path('mostrar_serie', {'id': id_serie}) }}">
+                <a href="{{ path('mostrar_serie_id', {'id': id_serie}) }}">
                 <!-- TODO: enlace a la serie -->
                 <img
                     src="{{ asset(poster_serie) }}"
