--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,20 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Regístrate!{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <h1>Regístrate!</h1>
 
     {{ form_errors(registrationForm) }}
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.username) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+        {{ form_row(registrationForm.email, {
+            label: 'Correo '
         }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+        {{ form_row(registrationForm.username, {
+            label: 'Usuario '
+        }) }}
+        {{ form_row(registrationForm.plainPassword, {
+            label: 'Contraseña '
+        }) }}
+        {{ form_row(registrationForm.agreeTerms, {
+            label: 'Términos y condiciones'
+        }) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn">Registrarse</button>
     {{ form_end(registrationForm) }}
+    <br>
+    <a href="{{ path('app_login') }}">Inicio de sesión</a>
+
 {% endblock %}
