Solucionado CRUD Serie - Plataforma: - Se elimina la entidad Plataforma - Se crea una nueva entidad Streaming - TODO: login/autenticación directa tras registro y redirect a home - TODO: terminar método de empezarSerie()

--- a/templates/serie/views/showAllSeriesStreaming.html.twig
+++ b/templates/serie/views/showAllSeriesStreaming.html.twig
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="{{ asset('styles/home.css') }}">
 {% endblock %}
 
-{% block title %}Series de {{ plataforma }}{% endblock %}
+{% block title %}Series de {{ streaming }}{% endblock %}
 
 {% block body %}
     <!-- NAVBAR: -->
@@ -160,7 +160,7 @@
           </linearGradient>
         </defs>
       </svg>
-      <h1 class="titulo-pagina">Show All Series Plataforma: {{ plataforma }}</h1>
+      <h1 class="titulo-pagina">Show All Series Plataforma: {{ streaming }}</h1>
       <!-- TODO: DIV RESPONSIVE PARA CARDS -->
       <div class="container text-center card-container">
         <div class="row">
