--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-start;
+  margin-top: 4vh;
   margin-left: 8vh;
   margin-bottom: 10vh;
 }
