--- a/templates/serie/views/showAllSeriesGenero.html.twig
+++ b/templates/serie/views/showAllSeriesGenero.html.twig
@@ -110,7 +110,7 @@
               <a class="nav-link" aria-current="page" href="{{ path('home') }}">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Perfil</a>
+              <a class="nav-link" href="{{ path('perfil') }}">Perfil</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href=""
