--- a/templates/serie/views/showSerie.html.twig
+++ b/templates/serie/views/showSerie.html.twig
@@ -111,7 +111,7 @@
               <a class="nav-link" href="{{ path('home') }}">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Perfil</a>
+              <a class="nav-link" href="{{ path('perfil') }}">Perfil</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href=""
