Parte Manager II: - Redirect a manager cuando user logeado tenga ROLE_MANAGER - Acceso a manager solo disponible para usuarios con ROLE_MANAGER - Editar estilo del gráfico (manager.html.twig) - TODO: Obtener datos del gráfico de la BBDD

--- a/templates/manager/manager.html.twig
+++ b/templates/manager/manager.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h2>Series vistas por mes:</h2><br>
-    <div style="height: 300px;">
+    <p style="text-align:center;font-weight:bold;font-size:22px;margin-top:5vh">Series vistas por mes:</p><br>
+    <div style="height: 500px;border: 1px solid #000;padding: 4vh;margin: 4vh;border-radius: 5px">
         {{ render_chart(chart) }}
     </div>
 {% endblock %}
