Funcionalidad Listas & Username Perfil: - Se añade la funcionalidad para cambiar entre listas dentro del perfil de usuario - Se añade también el nombre de usuario dinámico en el perfil

--- a/assets/styles/perfil.css
+++ b/assets/styles/perfil.css
@@ -124,7 +124,13 @@
     font-weight: bold;
   }
   
-  .flex-container-listas .titulo-lista.activo {
+  .flex-container-listas .titulo-lista.activo_s_vistas {
+    border-bottom: 3px solid #fff;
+  }.flex-container-listas .titulo-lista.activo_s_viendo {
+    border-bottom: 3px solid #fff;
+  }.flex-container-listas .titulo-lista.activo_s_por_ver {
+    border-bottom: 3px solid #fff;
+  }.flex-container-listas .titulo-lista.activo_s_favoritas {
     border-bottom: 3px solid #fff;
   }
   
