Estadísticas Perfil: - Se añaden las estadísticas al perfil de forma dinámica:    - Nº Series Vistas    - Nº Series Por Ver    - Nº Series Favoritas

--- a/templates/page/perfil/perfil.html.twig
+++ b/templates/page/perfil/perfil.html.twig
@@ -91,17 +91,17 @@
             <div>
               <!-- TODO: enlace a lista -->
               <p class="titulo-info">Series Vistas</p>
-              <p class="numero-series">18</p>
+              <p class="numero-series">{{ stats[0] }}</p>
             </div>
             <div>
               <!-- TODO: enlace a lista -->
               <p class="titulo-info">Series por ver</p>
-              <p class="numero-series">24</p>
+              <p class="numero-series">{{ stats[1] }}</p>
             </div>
             <div>
               <!-- TODO: enlace a lista -->
               <p class="titulo-info">Favoritos</p>
-              <p class="numero-series">6</p>
+              <p class="numero-series">{{ stats[2] }}</p>
             </div>
             <div>
               <p class="titulo-info">Géneros más vistos</p>
